# SRProxy

./: BasicTypesProxy.cxx  CMakeLists.txt  README.md
app/: CMakeLists.txt  declaration_templates.h  gen_srproxy.cxx
cmake/Modules/: GenSRProxy.cmake
cmake/Templates/: SRProxyConfig.cmake.in  setup.SRProxy.sh.in
src/: BasicTypesProxy.cxx  CMakeLists.txt
src/include/SRProxy/: BasicTypesProxy.h  BasicTypesProxy.txx  FlatBasicTypes.h
test/: CMakeLists.txt
